# Autotrainer

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NEXT_STEPS.md  README.md  RUNNER_SETUP.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: README.md
examples/: README.md  pytorch_auto.py  pytorch_ddp.py  pytorch_fit.py  pytorch_optimize.py  pytorch_tune.py  sklearn_example.py  tensorflow_scope.py  xgboost_example.py
examples/slurm/: cpu_sklearn_xgboost.sbatch  pytorch_multinode.sbatch  pytorch_singlenode.sbatch  pytorch_tuning.sbatch  tensorflow_multinode.sbatch
graphify-out/: .graphify_analysis.json  .graphify_ast.json  .graphify_chunk_01.json  .graphify_detect.json  .graphify_extract.json  .graphify_python  .graphify_root  .graphify_semantic.json  GRAPH_REPORT.md  graph.json
graphify-out/cache/: stat-index.json
scripts/: provision-runner-python.ps1
src/autotrainer/: __init__.py  __main__.py  _fit_search.py  _optimize.py  auto_optim.py  bottleneck.py  cli.py  detect.py  doctor.py  fit.py  fitting.py  launcher.py  loop.py  slurm.py  throughput.py  tuning.py  tuning_estimator.py  utils.py
src/autotrainer/backends/: boosting_backend.py  sklearn_backend.py  tf_backend.py  torch_backend.py
tests/: conftest.py  test_auto_optim.py  test_autolaunch.py  test_autotrainer.py  test_backends.py  test_bottleneck.py  test_cli.py  test_distributed.py  test_doctor.py  test_fit.py  test_launcher.py  test_loop.py  test_optimize.py  test_throughput.py  test_tier3.py  test_tier3b.py  test_tuning.py  test_tuning_estimator.py  test_utils.py
