[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autotrainer"
version = "0.7.0"
description = "Automatic distributed training for ML models: detects hardware, picks a strategy, tunes batch size."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Suhas Goravale Siidaramu" }]
keywords = ["distributed-training", "pytorch", "slurm", "machine-learning"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "psutil>=5.9",
]

[project.optional-dependencies]
torch = ["torch>=2.0"]
sklearn = ["scikit-learn>=1.3"]
tf = ["tensorflow>=2.13"]
boosting = ["xgboost>=2.0", "lightgbm>=4.0"]
tune = ["optuna>=3.0"]
dev = ["pytest", "ruff", "build", "twine"]

[project.urls]
Homepage = "https://github.com/OriAlpha/autotrainer"
Repository = "https://github.com/OriAlpha/autotrainer"
Changelog = "https://github.com/OriAlpha/autotrainer/blob/main/CHANGELOG.md"
Issues = "https://github.com/OriAlpha/autotrainer/issues"

[project.scripts]
autotrainer = "autotrainer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
